--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "AWS Route 53 Geolocation Updater"
-description: "This GitHub Action updates the geolocation records of a domain in AWS Route 53 based on a list of countries."
+name: "AWS Route 53 Geolocation Remover"
+description: "This GitHub Action removes the geolocation records of a domain in AWS Route 53."
 branding:
   color: 'green'
   icon: 'check-square'
